Fixed the CSS for the rules page, made a new CSS class for app-containers. Fixed text alignment

--- a/www/css/app.css
+++ b/www/css/app.css
@@ -230,6 +230,7 @@ p {
     border-radius: 10px;
 }
 
-.login-container {
+.app-container {
   background-color: snow;
+  border-radius: 5px;
 }
